<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".permissions">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/permissions_graphic"
        app:layout_constraintBottom_toTopOf="@+id/button2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_lower_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_upper_curve" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/we_need_few_permissions_for_seamless_account_opening_journey"
        android:textSize="23dp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="77dp"
            android:layout_height="61dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="25dp"

            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/phone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="140dp"
            android:text="@string/phone_identity"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_need_this_access_to_verify_vour_mobile_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/sms" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/camera" />

        <TextView
            android:id="@+id/textView10"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="300dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/mic" />

        <TextView
            android:id="@+id/textView11"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mic" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/location" />

        <TextView
            android:id="@+id/textView12"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>